--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Special+Gothic+Condensed+One&display=swap');
+
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
+:root {
+    --Special_Gothic: "Special Gothic Condensed One", sans-serif;
+    --Quicksand: "Quicksand", sans-serif;
+}
+
 body {
-    
+    background-color: #303030;
 }
