--- a/style.css
+++ b/style.css
@@ -18,3 +18,43 @@ body {
 .navbar .btn {
     font-family: var(--Special_Gothic);
 }
+
+.jumbotron .container {
+    background-color: rgb(214, 215, 216);
+    position: relative;
+    top: 100px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1030;
+}
+
+.card-img-top {
+    height: 150px;
+    object-fit: contain;
+    width: 100%;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: center;
+}
+
+.card-title {
+    margin-bottom: 10px;
+}
+
+.card-text {
+    margin-bottom: 15px;
+}
