--- a/style.css
+++ b/style.css
@@ -13,21 +13,43 @@ body {
 .navbar .dropdown-item,
 .navbar .form-control {
     font-family: var(--Quicksand);
+    border-radius: 20px;
 }
 
 .navbar .btn {
     font-family: var(--Special_Gothic);
+    border-radius: 20px;
 }
 
 .jumbotron .container {
     background-color: rgb(214, 215, 216);
     position: relative;
-    top: 100px;
-    padding: 10px;
+    top: 65px;
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+    flex-wrap: wrap;
+    border-radius: 10px;
+}
+
+.jumbotron .container-2 {
+    background-color: #303030;
+    position: relative;
+    top: 65px;
+    padding: 40px;
     display: flex;
     justify-content: center;
     gap: 20px;
     flex-wrap: wrap;
+}
+
+.jumbotron .container-2 .lead {
+    font-family: var(--Special_Gothic);
+    color: white;
+    font-size: 80px;
+    position: relative;
+    top: 20px;
 }
 
 .navbar {
@@ -53,8 +75,25 @@ body {
 
 .card-title {
     margin-bottom: 10px;
+    font-size: 15px;
+    font-family: var(--Quicksand);
+    font-weight: bold;
 }
 
 .card-text {
     margin-bottom: 15px;
+    font-size: 15px;
+    font-family: var(--Quicksand);
+}
+
+.preco {
+    font-family: var(--Special_Gothic);
+}
+
+.bi-search {
+    color: white;
+}
+
+.btn-primary {
+    background-color: #0d8f25;
 }
