--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     gap: 70px;
     flex-wrap: wrap;
     border-radius: 10px;
+    margin-bottom: 200px;
 }
 
 .jumbotron .container-2 {
@@ -96,4 +97,10 @@ body {
 
 .btn-primary {
     background-color: #0d8f25;
+}
+
+.bi-person-circle {
+    position: relative;
+    width: 50px;
+    height: 50px;
 }
